# lib/db/src/schema/index.ts
@@ -22,3 +22,4 @@ export * from "./notifications";
 export * from "./loyalty";
 export { purchaseReturnsTable, purchaseReturnItemsTable } from "./purchases";
 export * from "./replenishment";
+export * from "./internal-consumptions";
